Fix overflow, now it broke the y axis x_X

--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,5 @@ body {
 
 #root {
   overflow-x: hidden;
+  overflow-y: overlay;
 }
